# plover_context_aware_commands

./: plover_context_aware_commands.py  setup.cfg  test.json
