[metadata]
name = plover_context_aware_commands
version = 0.1.0
description = Commands that are aware of recent translations
long_description = file: README.rst
author = Ian Cloud
author_email = ko0oyotl@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/KoiOates/plover_launch_command
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=34.4.0
	setuptools-scm
install_requires =
	plover>=4.0.0.dev1
py_modules =
	plover_launch_command

[options.entry_points]
plover.command =
	init_context_aware = plover_context_aware_commands:init_context_aware
	launch_in_bg = plover_context_aware_commands:launch_in_bg
	print_last_words = plover_context_aware_commands:print_last_words

[bdist_wheel]
universal = 1

# vim: commentstring=#\ %s list
